<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


<RelativeLayout
    android:background="@drawable/home_rounded_bottom"
    android:id="@+id/rl_home_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_main_title"
        android:textColor="#fff"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        />

    <ImageView
        android:contentDescription="notification"
        android:id="@+id/btn_notification"
        android:src="@drawable/ic_bell"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="24dp"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_vertical"/>



    <LinearLayout
        android:layout_below="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/home_lead_title" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#fff"
            android:textSize="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="16dp"
            android:textFontWeight="100"
            android:layout_height="55dp"
            android:lineSpacingMultiplier="1.25"
            android:lineSpacingExtra="2dp"
            android:text="@string/home_lead_sub" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginRight="17dp"
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:background="@drawable/button_rounded_call">

                <ImageView
                    android:contentDescription="do your own test"
                    android:id="@+id/icon_call_now"
                    android:src="@drawable/ic_phone"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center_vertical"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:lineHeight="26dp"
                    android:text="@string/txt_btn_call_now" />

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginRight="17dp"
                android:layout_width="155dp"
                android:layout_height="48dp"
                android:background="@drawable/button_rounded_sms">

                <ImageView
                    android:contentDescription="do your own test"
                    android:id="@+id/icon_send_sms"
                    android:src="@drawable/ic_message_circle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center_vertical"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:lineHeight="26dp"
                    android:text="@string/txt_btn_send_sms" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>




        <RelativeLayout
            android:gravity="center"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            android:id="@+id/ll_home_prevention"
            android:layout_below="@+id/rl_home_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_prevention_header"
                android:text="@string/prevention_header"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:layout_marginBottom="24dp"
                android:textSize="20dp"
                android:lineHeight="22dp"
                android:textColor="#000"
                />

            <RelativeLayout
                android:layout_below="@+id/tv_prevention_header"
                android:layout_alignParentLeft="true"
                android:layout_width="90dp"
                android:layout_height="138dp"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="do your own test"
                    android:id="@+id/img_close_contact"
                    android:src="@drawable/ic_v_avoid_close_contact"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_below="@+id/img_close_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_img_text_one"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textSize="16dp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/tv_prevention_header"
                android:layout_centerHorizontal="true"
                android:layout_width="90dp"
                android:layout_height="138dp"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="do your own test"
                    android:id="@+id/img_wash_hands"
                    android:src="@drawable/ic_v_clean_hands"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_below="@+id/img_wash_hands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_img_text_two"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textSize="16dp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/tv_prevention_header"
                android:layout_alignParentRight="true"
                android:layout_width="90dp"
                android:layout_height="138dp"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="do your own test"
                    android:id="@+id/img_wear_cover"
                    android:src="@drawable/ic_v_wear_mask"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_below="@+id/img_wear_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention_img_text_three"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:textSize="16dp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    />

            </RelativeLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/ll_home_prevention"
            android:id="@+id/card_instruction"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            >



            <androidx.cardview.widget.CardView
                android:layout_alignParentBottom="true"
                android:id="@+id/card_instruction_body"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                app:cardUseCompatPadding="false"
                app:cardCornerRadius="16dp"
                android:elevation="-24dp"
                app:cardElevation="-24dp"
                app:cardMaxElevation="0dp"
                >

                <LinearLayout
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="140dp"
                    android:paddingTop="16dp"
                    android:elevation="-24dp"
                    android:background="@drawable/home_card_gradient_color"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_title"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:textSize="18dp"
                        android:textColor="#fff"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cv_body"
                        android:textColor="#fff"
                        android:textSize="16dp"
                        android:paddingRight="16dp"
                        android:layout_marginRight="14dp"
                        android:lineHeight="22dp"
                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:contentDescription="do your own test"
                android:id="@+id/card_instruction_img"
                android:src="@drawable/ic_health_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="16.92dp"
                android:layout_gravity="center_vertical"/>

        </RelativeLayout>



<!--    <ProgressBar-->
<!--        android:id="@+id/progress_circular_home"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:indeterminate="true"-->
<!--        android:indeterminateDrawable="@drawable/progress"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->
</RelativeLayout>